Aktualisierung der Konfigurationsdateien für das dixa_messenger_flutter Projekt: Hinzufügen einer Podfile für iOS, Aktualisierung der Pod-Abhängigkeiten und Anpassung der Swift-Version. Außerdem wurde die Plattformversion in der Podspec-Datei auf iOS 13.0 erhöht und die Veröffentlichung des Pakets deaktiviert.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: dixa_messenger_flutter
 description: "A new Flutter plugin project."
+publish_to: "none"
 version: 0.0.1
-homepage:
 
 environment:
   sdk: ^3.8.0
